--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -671,7 +671,6 @@
     font-weight: 400;
 }
 
-
 .meter-display {
     background-color: #edeef2;
     border: 1px solid #e4e8ec;
@@ -788,10 +787,33 @@
     margin: 10px 0;
 }
 
+#log-meter-modal .meter-detail-content {
+    padding: 10px 0;
+}
+
+#file-upload-filename {
+    margin: 20px 0px 20px 75px;
+    font-size: 14px;
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+}
+.user-list-form .form-group {
+    margin: 0;
+}
+
+#property_picture_attributes_avatar {
+    font-size: 14px;
+    width: 210px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+}
+
 @media(max-width: 767px){
-    #edit_company_176 {
-        padding: 20px 15px;
-    }
     .common-checkbox .form-check {
         display: inline;
     }
@@ -806,7 +828,6 @@
         font-size: 14px;
     }
 }
-
 
 @media(max-width: 485px){
     .property-update-content {
@@ -829,7 +850,6 @@
         margin: 5px 0;
     }
 }
-
 
 @media(max-width: 425px){
     .prop-floor-plan {
@@ -854,5 +874,4 @@
     .addnew-watermeter-wrap .form-group {
         margin: 0;
     }
-    
 }
