--- a/assets/css/pearl-plaza.css
+++ b/assets/css/pearl-plaza.css
@@ -1,74 +1,3 @@
-.site-content {
-    border-radius: 4px;
-    filter: drop-shadow(0px 2px 3px rgba(210,213,214,0.7));
-    background-color: #ffffff;
-    padding: 5px 15px;
-    margin: 10px 0;
-}
-.site-content.graph-bg {
-    height: 254px;
-}
-.graph-wrap #chart {
-    min-height: 160px !important;
-}
-.graph-content-lr {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-}
-
-.graph-content-lr h2, .graph-content-center h2 {
-    font-size: 14px;
-    color: #6f808c;
-    font-weight: 400;
-    margin: 0;
-}
-
-.graph-content-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
-}
-
-.graph-content-empty {
-    height: 160px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.graph-content-empty h2 {
-    font-size: 14px;
-    color: #6f808c;
-    font-weight: 400;
-    margin: 0;
-}
-
-.site-content-top {
-    padding: 5px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 42px;
-}
-
-.site-content-bottom {
-    padding: 5px 0;
-}
-
-#water-tabs nav {
-    background-color: transparent;
-    border: none;
-    filter: none;
-    padding: 0;
-}
-
-#water-tabs .nav-item {
-    padding: 5px 10px;
-}
-
 .action-wrap {
     display: flex;
     justify-content: flex-end;
@@ -90,17 +19,6 @@
 
 .accordion-content #water-tabs {
     padding: 5px 25px;
-}
-
-.time-wrap .time {
-    font-size: 14px;
-    line-height: 20px;
-    color: #6f808c;
-    font-weight: 400;
-}
-
-.time-wrap .date {
-    display: block;
 }
 
 .info-wrap h3 {
@@ -344,30 +262,6 @@
     border-bottom: 1px solid #dee2e6;
 }
 
-.meter-detail-content {
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-flow: wrap;
-}
-
-.meter-title {
-    font-size: 16px;
-    line-height: 24px;
-    color: #454545;
-    font-weight: 600;
-    margin: 0px;
-}
-
-.meter-days, .meter-reading {
-    font-size: 14px;
-    line-height: 24px;
-    color: #454545;
-    font-weight: 400;
-    margin: 0;
-}
-
 #meter-detail-tab {
     padding: 15px;
 }
@@ -378,7 +272,7 @@
 }
 
 #meter-detail-tab .nav-item {
-    padding: 0;
+    padding: 2px 0;
     border-radius: 0;
 }
 
@@ -452,6 +346,7 @@
 
 #log-meter-modal .meter-detail-content {
     padding: 10px 0;
+    min-height: auto;
 }
 .input-number {
     text-align: center;
@@ -481,72 +376,6 @@
 
 .audit-progress-wrap .btn-white {
     margin: 5px 0;
-}
-
-.audit-detail-wrap ul {
-    padding: 0;
-    list-style: none;
-    margin: 0;
-}
-.audit-detail-wrap ul li {
-    position: relative;
-}
-.audit-detail-wrap ul li a {
-    position: relative;
-    display: block;
-    cursor: pointer;
-}
-.audit-detail-wrap .title {
-    display: flex;
-    align-items: center;
-    margin: 5px 5px 5px 30px;
-}
-.audit-detail-wrap .title h2 {
-    margin: 0;
-    font-size: 15px;
-    line-height: 24px;
-    color: #454545;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.audit-date {
-    font-size: 13px;
-    color: #6f808c;
-    font-weight: 400;
-    margin: 5px 5px 5px 30px;
-}
-
-.icon-wrap {
-    position: absolute;
-    width: 20px;
-    border-radius: 50%;
-}
-
-
-.audit-table {
-    margin-bottom: 20px;
-}
-
-.audit-table-content .title {
-    margin: 0;
-    font-size: 15px;
-    color: #454545;
-    font-weight: 500;
-}
-
-.audit-table-content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.audit-table-content .list-no {
-    font-size: 13px;
-    text-transform: unset;
 }
 
 .display-wrap {
@@ -799,7 +628,7 @@
       z-index: 1;
       overflow-y: scroll;
       overflow-x: hidden;
-      height: 200px;
+      max-height: 200px;
 }
 
 .search-select-wrap .select2-list::-webkit-scrollbar {
@@ -880,6 +709,10 @@
 
 #Users .user-table {
     margin: 0;
+}
+
+#Users .table-heading {
+    border: none;
 }
 
 .assigned-unit {
@@ -1026,10 +859,6 @@
     border-left: 2px solid #e1e7f0;
 }
 
-.alert-event-table tbody td {
-    min-width: 240px;
-}
-
 .audit-table td {
     min-width: 150px;
 }
@@ -1058,9 +887,7 @@
 } 
 
 @media(max-width: 991px){
-    .table-wrap thead th, .table-wrap tbody td {
-        min-width: 240px;
-    }
+    
     .table-wrap .property-setting-table thead th, .table-wrap .property-setting-table tbody td {
         min-width: 320px;
     }
@@ -1131,9 +958,9 @@
     .add-overage-btn, .view-more-btn, .view-less-btn {
         margin: 10px 10px 10px 0px;
     }
-    .property-manager-form .form-group {
+    /* .property-manager-form .form-group {
         margin: 5px 0;
-    }
+    } */
     .add-unit-wrap {
         padding: 8px 50px 8px 50px;
     }
